<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_today">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="pl.edu.pjwstk.pamo.schedule.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_today"
        android:name="pl.edu.pjwstk.pamo.schedule.ui.today.TodayFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today" >
        <argument
            android:name="date"
            app:argType="string"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="pl.edu.pjwstk.pamo.schedule.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>